[package]
name = "coriolis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
utoipa = { version = "3.2.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
lambda-web = { version = "0.2.0", features=["actix4"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-smithy-types= "0.56.1"
aws-sdk-lambda = "0.31.1"
aws-sdk-dynamodb = "0.31.1"
base64 = "0.21.0"
uuid = "1.3.0"
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.3"

[dev-dependencies]
mockall = "0.11.3"
rstest = "0.18.2"

[features]
integration=[]